service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blazecicd-client
  namespace: blazecicd
spec:
  type: ClusterIP
  selector:
    app: blazecicd-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
