ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blazecicd-client-ingress
  namespace: blazecicd
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: www.mockify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blazecicd-client
                port:
                  number: 80
